# Enable Qt MOC/UIC/RCC
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC OFF)

# Export library
add_library(
  librepcb_libraryeditor STATIC
  cmp/cmpsigpindisplaytypecombobox.cpp
  cmp/cmpsigpindisplaytypecombobox.h
  cmp/componenteditorwidget.cpp
  cmp/componenteditorwidget.h
  cmp/componenteditorwidget.ui
  cmp/componentpinsignalmapmodel.cpp
  cmp/componentpinsignalmapmodel.h
  cmp/componentsignallisteditorwidget.cpp
  cmp/componentsignallisteditorwidget.h
  cmp/componentsignallistmodel.cpp
  cmp/componentsignallistmodel.h
  cmp/componentsymbolvarianteditdialog.cpp
  cmp/componentsymbolvarianteditdialog.h
  cmp/componentsymbolvarianteditdialog.ui
  cmp/componentsymbolvariantitemlisteditorwidget.cpp
  cmp/componentsymbolvariantitemlisteditorwidget.h
  cmp/componentsymbolvariantitemlistmodel.cpp
  cmp/componentsymbolvariantitemlistmodel.h
  cmp/componentsymbolvariantlistmodel.cpp
  cmp/componentsymbolvariantlistmodel.h
  cmp/componentsymbolvariantlistwidget.cpp
  cmp/componentsymbolvariantlistwidget.h
  cmp/compsymbvarpinsignalmapeditorwidget.cpp
  cmp/compsymbvarpinsignalmapeditorwidget.h
  cmp/if_componentsymbolvarianteditorprovider.h
  cmpcat/componentcategoryeditorwidget.cpp
  cmpcat/componentcategoryeditorwidget.h
  cmpcat/componentcategoryeditorwidget.ui
  common/categorychooserdialog.cpp
  common/categorychooserdialog.h
  common/categorychooserdialog.ui
  common/categorylisteditorwidget.cpp
  common/categorylisteditorwidget.h
  common/categorylisteditorwidget.ui
  common/categorytreelabeltextbuilder.cpp
  common/categorytreelabeltextbuilder.h
  common/componentchooserdialog.cpp
  common/componentchooserdialog.h
  common/componentchooserdialog.ui
  common/editorwidgetbase.cpp
  common/editorwidgetbase.h
  common/libraryelementchecklistwidget.cpp
  common/libraryelementchecklistwidget.h
  common/packagechooserdialog.cpp
  common/packagechooserdialog.h
  common/packagechooserdialog.ui
  common/symbolchooserdialog.cpp
  common/symbolchooserdialog.h
  common/symbolchooserdialog.ui
  dev/deviceeditorwidget.cpp
  dev/deviceeditorwidget.h
  dev/deviceeditorwidget.ui
  dev/devicepadsignalmapmodel.cpp
  dev/devicepadsignalmapmodel.h
  dev/padsignalmapeditorwidget.cpp
  dev/padsignalmapeditorwidget.h
  lib/librarylisteditorwidget.cpp
  lib/librarylisteditorwidget.h
  lib/librarylisteditorwidget.ui
  lib/libraryoverviewwidget.cpp
  lib/libraryoverviewwidget.h
  lib/libraryoverviewwidget.ui
  libraryeditor.cpp
  libraryeditor.h
  libraryeditor.ui
  libraryelementcache.cpp
  libraryelementcache.h
  newelementwizard/newelementwizard.cpp
  newelementwizard/newelementwizard.h
  newelementwizard/newelementwizard.ui
  newelementwizard/newelementwizardcontext.cpp
  newelementwizard/newelementwizardcontext.h
  newelementwizard/newelementwizardpage_choosetype.cpp
  newelementwizard/newelementwizardpage_choosetype.h
  newelementwizard/newelementwizardpage_choosetype.ui
  newelementwizard/newelementwizardpage_componentpinsignalmap.cpp
  newelementwizard/newelementwizardpage_componentpinsignalmap.h
  newelementwizard/newelementwizardpage_componentpinsignalmap.ui
  newelementwizard/newelementwizardpage_componentproperties.cpp
  newelementwizard/newelementwizardpage_componentproperties.h
  newelementwizard/newelementwizardpage_componentproperties.ui
  newelementwizard/newelementwizardpage_componentsignals.cpp
  newelementwizard/newelementwizardpage_componentsignals.h
  newelementwizard/newelementwizardpage_componentsignals.ui
  newelementwizard/newelementwizardpage_componentsymbols.cpp
  newelementwizard/newelementwizardpage_componentsymbols.h
  newelementwizard/newelementwizardpage_componentsymbols.ui
  newelementwizard/newelementwizardpage_copyfrom.cpp
  newelementwizard/newelementwizardpage_copyfrom.h
  newelementwizard/newelementwizardpage_copyfrom.ui
  newelementwizard/newelementwizardpage_deviceproperties.cpp
  newelementwizard/newelementwizardpage_deviceproperties.h
  newelementwizard/newelementwizardpage_deviceproperties.ui
  newelementwizard/newelementwizardpage_entermetadata.cpp
  newelementwizard/newelementwizardpage_entermetadata.h
  newelementwizard/newelementwizardpage_entermetadata.ui
  newelementwizard/newelementwizardpage_packagepads.cpp
  newelementwizard/newelementwizardpage_packagepads.h
  newelementwizard/newelementwizardpage_packagepads.ui
  pkg/dialogs/footprintpadpropertiesdialog.cpp
  pkg/dialogs/footprintpadpropertiesdialog.h
  pkg/dialogs/footprintpadpropertiesdialog.ui
  pkg/footprintclipboarddata.cpp
  pkg/footprintclipboarddata.h
  pkg/footprintlisteditorwidget.cpp
  pkg/footprintlisteditorwidget.h
  pkg/footprintlistmodel.cpp
  pkg/footprintlistmodel.h
  pkg/fsm/cmd/cmddragselectedfootprintitems.cpp
  pkg/fsm/cmd/cmddragselectedfootprintitems.h
  pkg/fsm/cmd/cmdpastefootprintitems.cpp
  pkg/fsm/cmd/cmdpastefootprintitems.h
  pkg/fsm/cmd/cmdremoveselectedfootprintitems.cpp
  pkg/fsm/cmd/cmdremoveselectedfootprintitems.h
  pkg/fsm/packageeditorfsm.cpp
  pkg/fsm/packageeditorfsm.h
  pkg/fsm/packageeditorstate.cpp
  pkg/fsm/packageeditorstate.h
  pkg/fsm/packageeditorstate_addholes.cpp
  pkg/fsm/packageeditorstate_addholes.h
  pkg/fsm/packageeditorstate_addnames.cpp
  pkg/fsm/packageeditorstate_addnames.h
  pkg/fsm/packageeditorstate_addpads.cpp
  pkg/fsm/packageeditorstate_addpads.h
  pkg/fsm/packageeditorstate_addvalues.cpp
  pkg/fsm/packageeditorstate_addvalues.h
  pkg/fsm/packageeditorstate_drawcircle.cpp
  pkg/fsm/packageeditorstate_drawcircle.h
  pkg/fsm/packageeditorstate_drawline.cpp
  pkg/fsm/packageeditorstate_drawline.h
  pkg/fsm/packageeditorstate_drawpolygon.cpp
  pkg/fsm/packageeditorstate_drawpolygon.h
  pkg/fsm/packageeditorstate_drawpolygonbase.cpp
  pkg/fsm/packageeditorstate_drawpolygonbase.h
  pkg/fsm/packageeditorstate_drawrect.cpp
  pkg/fsm/packageeditorstate_drawrect.h
  pkg/fsm/packageeditorstate_drawtext.cpp
  pkg/fsm/packageeditorstate_drawtext.h
  pkg/fsm/packageeditorstate_drawtextbase.cpp
  pkg/fsm/packageeditorstate_drawtextbase.h
  pkg/fsm/packageeditorstate_select.cpp
  pkg/fsm/packageeditorstate_select.h
  pkg/packageeditorwidget.cpp
  pkg/packageeditorwidget.h
  pkg/packageeditorwidget.ui
  pkg/packagepadlisteditorwidget.cpp
  pkg/packagepadlisteditorwidget.h
  pkg/packagepadlistmodel.cpp
  pkg/packagepadlistmodel.h
  pkg/widgets/boardsideselectorwidget.cpp
  pkg/widgets/boardsideselectorwidget.h
  pkg/widgets/footprintpadshapeselectorwidget.cpp
  pkg/widgets/footprintpadshapeselectorwidget.h
  pkg/widgets/packagepadcombobox.cpp
  pkg/widgets/packagepadcombobox.h
  pkgcat/packagecategoryeditorwidget.cpp
  pkgcat/packagecategoryeditorwidget.h
  pkgcat/packagecategoryeditorwidget.ui
  sym/dialogs/symbolpinpropertiesdialog.cpp
  sym/dialogs/symbolpinpropertiesdialog.h
  sym/dialogs/symbolpinpropertiesdialog.ui
  sym/fsm/cmd/cmddragselectedsymbolitems.cpp
  sym/fsm/cmd/cmddragselectedsymbolitems.h
  sym/fsm/cmd/cmdpastesymbolitems.cpp
  sym/fsm/cmd/cmdpastesymbolitems.h
  sym/fsm/cmd/cmdremoveselectedsymbolitems.cpp
  sym/fsm/cmd/cmdremoveselectedsymbolitems.h
  sym/fsm/symboleditorfsm.cpp
  sym/fsm/symboleditorfsm.h
  sym/fsm/symboleditorstate.cpp
  sym/fsm/symboleditorstate.h
  sym/fsm/symboleditorstate_addnames.cpp
  sym/fsm/symboleditorstate_addnames.h
  sym/fsm/symboleditorstate_addpins.cpp
  sym/fsm/symboleditorstate_addpins.h
  sym/fsm/symboleditorstate_addvalues.cpp
  sym/fsm/symboleditorstate_addvalues.h
  sym/fsm/symboleditorstate_drawcircle.cpp
  sym/fsm/symboleditorstate_drawcircle.h
  sym/fsm/symboleditorstate_drawline.cpp
  sym/fsm/symboleditorstate_drawline.h
  sym/fsm/symboleditorstate_drawpolygon.cpp
  sym/fsm/symboleditorstate_drawpolygon.h
  sym/fsm/symboleditorstate_drawpolygonbase.cpp
  sym/fsm/symboleditorstate_drawpolygonbase.h
  sym/fsm/symboleditorstate_drawrect.cpp
  sym/fsm/symboleditorstate_drawrect.h
  sym/fsm/symboleditorstate_drawtext.cpp
  sym/fsm/symboleditorstate_drawtext.h
  sym/fsm/symboleditorstate_drawtextbase.cpp
  sym/fsm/symboleditorstate_drawtextbase.h
  sym/fsm/symboleditorstate_select.cpp
  sym/fsm/symboleditorstate_select.h
  sym/symbolclipboarddata.cpp
  sym/symbolclipboarddata.h
  sym/symboleditorwidget.cpp
  sym/symboleditorwidget.h
  sym/symboleditorwidget.ui
)
target_include_directories(
  librepcb_libraryeditor
  PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../.."
)
target_link_libraries(
  librepcb_libraryeditor
  PRIVATE common
)
target_link_libraries(
  librepcb_libraryeditor
  PUBLIC # LibrePCB
         LibrePCB::Workspace
         # Third party
         TypeSafe::TypeSafe
         Optional::Optional
         # Qt
         Qt5::Widgets
)

# Alias to namespaced variant
add_library(LibrePCB::LibraryEditor ALIAS librepcb_libraryeditor)
