# Enable Qt MOC/UIC/RCC
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC OFF)
set(CMAKE_AUTORCC OFF)

# Export library
add_library(
  librepcb_project STATIC
  boards/board.cpp
  boards/board.h
  boards/boardairwiresbuilder.cpp
  boards/boardairwiresbuilder.h
  boards/boardfabricationoutputsettings.cpp
  boards/boardfabricationoutputsettings.h
  boards/boardgerberexport.cpp
  boards/boardgerberexport.h
  boards/boardlayerstack.cpp
  boards/boardlayerstack.h
  boards/boardpickplacegenerator.cpp
  boards/boardpickplacegenerator.h
  boards/boardplanefragmentsbuilder.cpp
  boards/boardplanefragmentsbuilder.h
  boards/boardselectionquery.cpp
  boards/boardselectionquery.h
  boards/boardusersettings.cpp
  boards/boardusersettings.h
  boards/cmd/cmdboardadd.cpp
  boards/cmd/cmdboardadd.h
  boards/cmd/cmdboarddesignrulesmodify.cpp
  boards/cmd/cmdboarddesignrulesmodify.h
  boards/cmd/cmdboardholeadd.cpp
  boards/cmd/cmdboardholeadd.h
  boards/cmd/cmdboardholeremove.cpp
  boards/cmd/cmdboardholeremove.h
  boards/cmd/cmdboardlayerstackedit.cpp
  boards/cmd/cmdboardlayerstackedit.h
  boards/cmd/cmdboardnetlineedit.cpp
  boards/cmd/cmdboardnetlineedit.h
  boards/cmd/cmdboardnetpointedit.cpp
  boards/cmd/cmdboardnetpointedit.h
  boards/cmd/cmdboardnetsegmentadd.cpp
  boards/cmd/cmdboardnetsegmentadd.h
  boards/cmd/cmdboardnetsegmentaddelements.cpp
  boards/cmd/cmdboardnetsegmentaddelements.h
  boards/cmd/cmdboardnetsegmentedit.cpp
  boards/cmd/cmdboardnetsegmentedit.h
  boards/cmd/cmdboardnetsegmentremove.cpp
  boards/cmd/cmdboardnetsegmentremove.h
  boards/cmd/cmdboardnetsegmentremoveelements.cpp
  boards/cmd/cmdboardnetsegmentremoveelements.h
  boards/cmd/cmdboardplaneadd.cpp
  boards/cmd/cmdboardplaneadd.h
  boards/cmd/cmdboardplaneedit.cpp
  boards/cmd/cmdboardplaneedit.h
  boards/cmd/cmdboardplaneremove.cpp
  boards/cmd/cmdboardplaneremove.h
  boards/cmd/cmdboardpolygonadd.cpp
  boards/cmd/cmdboardpolygonadd.h
  boards/cmd/cmdboardpolygonremove.cpp
  boards/cmd/cmdboardpolygonremove.h
  boards/cmd/cmdboardremove.cpp
  boards/cmd/cmdboardremove.h
  boards/cmd/cmdboardstroketextadd.cpp
  boards/cmd/cmdboardstroketextadd.h
  boards/cmd/cmdboardstroketextremove.cpp
  boards/cmd/cmdboardstroketextremove.h
  boards/cmd/cmdboardviaedit.cpp
  boards/cmd/cmdboardviaedit.h
  boards/cmd/cmddeviceinstanceadd.cpp
  boards/cmd/cmddeviceinstanceadd.h
  boards/cmd/cmddeviceinstanceedit.cpp
  boards/cmd/cmddeviceinstanceedit.h
  boards/cmd/cmddeviceinstanceeditall.cpp
  boards/cmd/cmddeviceinstanceeditall.h
  boards/cmd/cmddeviceinstanceremove.cpp
  boards/cmd/cmddeviceinstanceremove.h
  boards/cmd/cmdfootprintstroketextadd.cpp
  boards/cmd/cmdfootprintstroketextadd.h
  boards/cmd/cmdfootprintstroketextremove.cpp
  boards/cmd/cmdfootprintstroketextremove.h
  boards/cmd/cmdfootprintstroketextsreset.cpp
  boards/cmd/cmdfootprintstroketextsreset.h
  boards/drc/boardclipperpathgenerator.cpp
  boards/drc/boardclipperpathgenerator.h
  boards/drc/boarddesignrulecheck.cpp
  boards/drc/boarddesignrulecheck.h
  boards/drc/boarddesignrulecheckmessage.cpp
  boards/drc/boarddesignrulecheckmessage.h
  boards/graphicsitems/bgi_airwire.cpp
  boards/graphicsitems/bgi_airwire.h
  boards/graphicsitems/bgi_base.cpp
  boards/graphicsitems/bgi_base.h
  boards/graphicsitems/bgi_footprint.cpp
  boards/graphicsitems/bgi_footprint.h
  boards/graphicsitems/bgi_footprintpad.cpp
  boards/graphicsitems/bgi_footprintpad.h
  boards/graphicsitems/bgi_netline.cpp
  boards/graphicsitems/bgi_netline.h
  boards/graphicsitems/bgi_netpoint.cpp
  boards/graphicsitems/bgi_netpoint.h
  boards/graphicsitems/bgi_plane.cpp
  boards/graphicsitems/bgi_plane.h
  boards/graphicsitems/bgi_via.cpp
  boards/graphicsitems/bgi_via.h
  boards/items/bi_airwire.cpp
  boards/items/bi_airwire.h
  boards/items/bi_base.cpp
  boards/items/bi_base.h
  boards/items/bi_device.cpp
  boards/items/bi_device.h
  boards/items/bi_footprint.cpp
  boards/items/bi_footprint.h
  boards/items/bi_footprintpad.cpp
  boards/items/bi_footprintpad.h
  boards/items/bi_hole.cpp
  boards/items/bi_hole.h
  boards/items/bi_netline.cpp
  boards/items/bi_netline.h
  boards/items/bi_netpoint.cpp
  boards/items/bi_netpoint.h
  boards/items/bi_netsegment.cpp
  boards/items/bi_netsegment.h
  boards/items/bi_plane.cpp
  boards/items/bi_plane.h
  boards/items/bi_polygon.cpp
  boards/items/bi_polygon.h
  boards/items/bi_stroketext.cpp
  boards/items/bi_stroketext.h
  boards/items/bi_via.cpp
  boards/items/bi_via.h
  bomgenerator.cpp
  bomgenerator.h
  circuit/circuit.cpp
  circuit/circuit.h
  circuit/cmd/cmdcomponentinstanceadd.cpp
  circuit/cmd/cmdcomponentinstanceadd.h
  circuit/cmd/cmdcomponentinstanceedit.cpp
  circuit/cmd/cmdcomponentinstanceedit.h
  circuit/cmd/cmdcomponentinstanceremove.cpp
  circuit/cmd/cmdcomponentinstanceremove.h
  circuit/cmd/cmdcompsiginstsetnetsignal.cpp
  circuit/cmd/cmdcompsiginstsetnetsignal.h
  circuit/cmd/cmdnetclassadd.cpp
  circuit/cmd/cmdnetclassadd.h
  circuit/cmd/cmdnetclassedit.cpp
  circuit/cmd/cmdnetclassedit.h
  circuit/cmd/cmdnetclassremove.cpp
  circuit/cmd/cmdnetclassremove.h
  circuit/cmd/cmdnetsignaladd.cpp
  circuit/cmd/cmdnetsignaladd.h
  circuit/cmd/cmdnetsignaledit.cpp
  circuit/cmd/cmdnetsignaledit.h
  circuit/cmd/cmdnetsignalremove.cpp
  circuit/cmd/cmdnetsignalremove.h
  circuit/componentinstance.cpp
  circuit/componentinstance.h
  circuit/componentsignalinstance.cpp
  circuit/componentsignalinstance.h
  circuit/netclass.cpp
  circuit/netclass.h
  circuit/netsignal.cpp
  circuit/netsignal.h
  erc/ercmsg.cpp
  erc/ercmsg.h
  erc/ercmsglist.cpp
  erc/ercmsglist.h
  erc/if_ercmsgprovider.h
  library/cmd/cmdprojectlibraryaddelement.cpp
  library/cmd/cmdprojectlibraryaddelement.h
  library/cmd/cmdprojectlibraryremoveelement.cpp
  library/cmd/cmdprojectlibraryremoveelement.h
  library/projectlibrary.cpp
  library/projectlibrary.h
  metadata/cmd/cmdprojectmetadataedit.cpp
  metadata/cmd/cmdprojectmetadataedit.h
  metadata/projectmetadata.cpp
  metadata/projectmetadata.h
  project.cpp
  project.h
  schematics/cmd/cmdschematicadd.cpp
  schematics/cmd/cmdschematicadd.h
  schematics/cmd/cmdschematicedit.cpp
  schematics/cmd/cmdschematicedit.h
  schematics/cmd/cmdschematicnetlabeladd.cpp
  schematics/cmd/cmdschematicnetlabeladd.h
  schematics/cmd/cmdschematicnetlabelanchorsupdate.cpp
  schematics/cmd/cmdschematicnetlabelanchorsupdate.h
  schematics/cmd/cmdschematicnetlabeledit.cpp
  schematics/cmd/cmdschematicnetlabeledit.h
  schematics/cmd/cmdschematicnetlabelremove.cpp
  schematics/cmd/cmdschematicnetlabelremove.h
  schematics/cmd/cmdschematicnetpointedit.cpp
  schematics/cmd/cmdschematicnetpointedit.h
  schematics/cmd/cmdschematicnetsegmentadd.cpp
  schematics/cmd/cmdschematicnetsegmentadd.h
  schematics/cmd/cmdschematicnetsegmentaddelements.cpp
  schematics/cmd/cmdschematicnetsegmentaddelements.h
  schematics/cmd/cmdschematicnetsegmentedit.cpp
  schematics/cmd/cmdschematicnetsegmentedit.h
  schematics/cmd/cmdschematicnetsegmentremove.cpp
  schematics/cmd/cmdschematicnetsegmentremove.h
  schematics/cmd/cmdschematicnetsegmentremoveelements.cpp
  schematics/cmd/cmdschematicnetsegmentremoveelements.h
  schematics/cmd/cmdschematicremove.cpp
  schematics/cmd/cmdschematicremove.h
  schematics/cmd/cmdsymbolinstanceadd.cpp
  schematics/cmd/cmdsymbolinstanceadd.h
  schematics/cmd/cmdsymbolinstanceedit.cpp
  schematics/cmd/cmdsymbolinstanceedit.h
  schematics/cmd/cmdsymbolinstanceremove.cpp
  schematics/cmd/cmdsymbolinstanceremove.h
  schematics/graphicsitems/sgi_base.cpp
  schematics/graphicsitems/sgi_base.h
  schematics/graphicsitems/sgi_netlabel.cpp
  schematics/graphicsitems/sgi_netlabel.h
  schematics/graphicsitems/sgi_netline.cpp
  schematics/graphicsitems/sgi_netline.h
  schematics/graphicsitems/sgi_netpoint.cpp
  schematics/graphicsitems/sgi_netpoint.h
  schematics/graphicsitems/sgi_symbol.cpp
  schematics/graphicsitems/sgi_symbol.h
  schematics/graphicsitems/sgi_symbolpin.cpp
  schematics/graphicsitems/sgi_symbolpin.h
  schematics/items/si_base.cpp
  schematics/items/si_base.h
  schematics/items/si_netlabel.cpp
  schematics/items/si_netlabel.h
  schematics/items/si_netline.cpp
  schematics/items/si_netline.h
  schematics/items/si_netpoint.cpp
  schematics/items/si_netpoint.h
  schematics/items/si_netsegment.cpp
  schematics/items/si_netsegment.h
  schematics/items/si_symbol.cpp
  schematics/items/si_symbol.h
  schematics/items/si_symbolpin.cpp
  schematics/items/si_symbolpin.h
  schematics/schematic.cpp
  schematics/schematic.h
  schematics/schematiclayerprovider.cpp
  schematics/schematiclayerprovider.h
  schematics/schematicselectionquery.cpp
  schematics/schematicselectionquery.h
  settings/cmd/cmdprojectsettingschange.cpp
  settings/cmd/cmdprojectsettingschange.h
  settings/projectsettings.cpp
  settings/projectsettings.h
)
target_include_directories(
  librepcb_project
  PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../.."
)
target_link_libraries(
  librepcb_project
  PRIVATE common
)
target_link_libraries(
  librepcb_project
  PUBLIC # LibrePCB
         LibrePCB::Library
         # Third party
         TypeSafe::TypeSafe
         DelaunayTriangulation::DelaunayTriangulation
         Optional::Optional
         # Qt
         Qt5::Widgets
         Qt5::PrintSupport
)

# Alias to namespaced variant
add_library(LibrePCB::Project ALIAS librepcb_project)
