# Enable Qt MOC/UIC/RCC
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC OFF)

# Export library
add_library(
  librepcb_projecteditor STATIC
  boardeditor/boardclipboarddata.cpp
  boardeditor/boardclipboarddata.h
  boardeditor/boardclipboarddatabuilder.cpp
  boardeditor/boardclipboarddatabuilder.h
  boardeditor/boarddesignrulecheckdialog.cpp
  boardeditor/boarddesignrulecheckdialog.h
  boardeditor/boarddesignrulecheckdialog.ui
  boardeditor/boarddesignrulecheckmessagesdock.cpp
  boardeditor/boarddesignrulecheckmessagesdock.h
  boardeditor/boarddesignrulecheckmessagesdock.ui
  boardeditor/boardeditor.cpp
  boardeditor/boardeditor.h
  boardeditor/boardeditor.ui
  boardeditor/boardlayersdock.cpp
  boardeditor/boardlayersdock.h
  boardeditor/boardlayersdock.ui
  boardeditor/boardlayerstacksetupdialog.cpp
  boardeditor/boardlayerstacksetupdialog.h
  boardeditor/boardlayerstacksetupdialog.ui
  boardeditor/boardnetsegmentsplitter.cpp
  boardeditor/boardnetsegmentsplitter.h
  boardeditor/boardpickplacegeneratordialog.cpp
  boardeditor/boardpickplacegeneratordialog.h
  boardeditor/boardpickplacegeneratordialog.ui
  boardeditor/boardplanepropertiesdialog.cpp
  boardeditor/boardplanepropertiesdialog.h
  boardeditor/boardplanepropertiesdialog.ui
  boardeditor/boardviapropertiesdialog.cpp
  boardeditor/boardviapropertiesdialog.h
  boardeditor/boardviapropertiesdialog.ui
  boardeditor/deviceinstancepropertiesdialog.cpp
  boardeditor/deviceinstancepropertiesdialog.h
  boardeditor/deviceinstancepropertiesdialog.ui
  boardeditor/fabricationoutputdialog.cpp
  boardeditor/fabricationoutputdialog.h
  boardeditor/fabricationoutputdialog.ui
  boardeditor/fsm/boardeditorfsm.cpp
  boardeditor/fsm/boardeditorfsm.h
  boardeditor/fsm/boardeditorstate.cpp
  boardeditor/fsm/boardeditorstate.h
  boardeditor/fsm/boardeditorstate_adddevice.cpp
  boardeditor/fsm/boardeditorstate_adddevice.h
  boardeditor/fsm/boardeditorstate_addhole.cpp
  boardeditor/fsm/boardeditorstate_addhole.h
  boardeditor/fsm/boardeditorstate_addstroketext.cpp
  boardeditor/fsm/boardeditorstate_addstroketext.h
  boardeditor/fsm/boardeditorstate_addvia.cpp
  boardeditor/fsm/boardeditorstate_addvia.h
  boardeditor/fsm/boardeditorstate_drawplane.cpp
  boardeditor/fsm/boardeditorstate_drawplane.h
  boardeditor/fsm/boardeditorstate_drawpolygon.cpp
  boardeditor/fsm/boardeditorstate_drawpolygon.h
  boardeditor/fsm/boardeditorstate_drawtrace.cpp
  boardeditor/fsm/boardeditorstate_drawtrace.h
  boardeditor/fsm/boardeditorstate_select.cpp
  boardeditor/fsm/boardeditorstate_select.h
  boardeditor/unplacedcomponentsdock.cpp
  boardeditor/unplacedcomponentsdock.h
  boardeditor/unplacedcomponentsdock.ui
  cmd/cmdaddcomponenttocircuit.cpp
  cmd/cmdaddcomponenttocircuit.h
  cmd/cmdadddevicetoboard.cpp
  cmd/cmdadddevicetoboard.h
  cmd/cmdaddsymboltoschematic.cpp
  cmd/cmdaddsymboltoschematic.h
  cmd/cmdboardsplitnetline.cpp
  cmd/cmdboardsplitnetline.h
  cmd/cmdchangenetsignalofschematicnetsegment.cpp
  cmd/cmdchangenetsignalofschematicnetsegment.h
  cmd/cmdcombineboardnetsegments.cpp
  cmd/cmdcombineboardnetsegments.h
  cmd/cmdcombinenetsignals.cpp
  cmd/cmdcombinenetsignals.h
  cmd/cmdcombineschematicnetsegments.cpp
  cmd/cmdcombineschematicnetsegments.h
  cmd/cmddragselectedboarditems.cpp
  cmd/cmddragselectedboarditems.h
  cmd/cmdflipselectedboarditems.cpp
  cmd/cmdflipselectedboarditems.h
  cmd/cmdmirrorselectedschematicitems.cpp
  cmd/cmdmirrorselectedschematicitems.h
  cmd/cmdmoveselectedschematicitems.cpp
  cmd/cmdmoveselectedschematicitems.h
  cmd/cmdpasteboarditems.cpp
  cmd/cmdpasteboarditems.h
  cmd/cmdpasteschematicitems.cpp
  cmd/cmdpasteschematicitems.h
  cmd/cmdremoveboarditems.cpp
  cmd/cmdremoveboarditems.h
  cmd/cmdremoveselectedboarditems.cpp
  cmd/cmdremoveselectedboarditems.h
  cmd/cmdremoveselectedschematicitems.cpp
  cmd/cmdremoveselectedschematicitems.h
  cmd/cmdremoveunusedlibraryelements.cpp
  cmd/cmdremoveunusedlibraryelements.h
  cmd/cmdremoveunusednetsignals.cpp
  cmd/cmdremoveunusednetsignals.h
  cmd/cmdreplacedevice.cpp
  cmd/cmdreplacedevice.h
  cmd/cmdrotateselectedschematicitems.cpp
  cmd/cmdrotateselectedschematicitems.h
  dialogs/addcomponentdialog.cpp
  dialogs/addcomponentdialog.h
  dialogs/addcomponentdialog.ui
  dialogs/bomgeneratordialog.cpp
  dialogs/bomgeneratordialog.h
  dialogs/bomgeneratordialog.ui
  dialogs/editnetclassesdialog.cpp
  dialogs/editnetclassesdialog.h
  dialogs/editnetclassesdialog.ui
  dialogs/projectpropertieseditordialog.cpp
  dialogs/projectpropertieseditordialog.h
  dialogs/projectpropertieseditordialog.ui
  dialogs/projectsettingsdialog.cpp
  dialogs/projectsettingsdialog.h
  dialogs/projectsettingsdialog.ui
  docks/ercmsgdock.cpp
  docks/ercmsgdock.h
  docks/ercmsgdock.ui
  newprojectwizard/newprojectwizard.cpp
  newprojectwizard/newprojectwizard.h
  newprojectwizard/newprojectwizard.ui
  newprojectwizard/newprojectwizardpage_initialization.cpp
  newprojectwizard/newprojectwizardpage_initialization.h
  newprojectwizard/newprojectwizardpage_initialization.ui
  newprojectwizard/newprojectwizardpage_metadata.cpp
  newprojectwizard/newprojectwizardpage_metadata.h
  newprojectwizard/newprojectwizardpage_metadata.ui
  newprojectwizard/newprojectwizardpage_versioncontrol.cpp
  newprojectwizard/newprojectwizardpage_versioncontrol.h
  newprojectwizard/newprojectwizardpage_versioncontrol.ui
  projecteditor.cpp
  projecteditor.h
  schematiceditor/fsm/schematiceditorfsm.cpp
  schematiceditor/fsm/schematiceditorfsm.h
  schematiceditor/fsm/schematiceditorstate.cpp
  schematiceditor/fsm/schematiceditorstate.h
  schematiceditor/fsm/schematiceditorstate_addcomponent.cpp
  schematiceditor/fsm/schematiceditorstate_addcomponent.h
  schematiceditor/fsm/schematiceditorstate_addnetlabel.cpp
  schematiceditor/fsm/schematiceditorstate_addnetlabel.h
  schematiceditor/fsm/schematiceditorstate_addtext.cpp
  schematiceditor/fsm/schematiceditorstate_addtext.h
  schematiceditor/fsm/schematiceditorstate_drawpolygon.cpp
  schematiceditor/fsm/schematiceditorstate_drawpolygon.h
  schematiceditor/fsm/schematiceditorstate_drawwire.cpp
  schematiceditor/fsm/schematiceditorstate_drawwire.h
  schematiceditor/fsm/schematiceditorstate_select.cpp
  schematiceditor/fsm/schematiceditorstate_select.h
  schematiceditor/renamenetsegmentdialog.cpp
  schematiceditor/renamenetsegmentdialog.h
  schematiceditor/renamenetsegmentdialog.ui
  schematiceditor/schematicclipboarddata.cpp
  schematiceditor/schematicclipboarddata.h
  schematiceditor/schematicclipboarddatabuilder.cpp
  schematiceditor/schematicclipboarddatabuilder.h
  schematiceditor/schematiceditor.cpp
  schematiceditor/schematiceditor.h
  schematiceditor/schematiceditor.ui
  schematiceditor/schematicnetsegmentsplitter.cpp
  schematiceditor/schematicnetsegmentsplitter.h
  schematiceditor/schematicpagesdock.cpp
  schematiceditor/schematicpagesdock.h
  schematiceditor/schematicpagesdock.ui
  schematiceditor/symbolinstancepropertiesdialog.cpp
  schematiceditor/symbolinstancepropertiesdialog.h
  schematiceditor/symbolinstancepropertiesdialog.ui
  toolbars/searchtoolbar.cpp
  toolbars/searchtoolbar.h
)
target_include_directories(
  librepcb_projecteditor
  PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../.."
)
target_link_libraries(
  librepcb_projecteditor
  PRIVATE common
)
target_link_libraries(
  librepcb_projecteditor
  PUBLIC # LibrePCB
         LibrePCB::Workspace
         # Third party
         TypeSafe::TypeSafe
         Optional::Optional
         # Qt
         Qt5::PrintSupport
         Qt5::Svg
         Qt5::Widgets
)

# Alias to namespaced variant
add_library(LibrePCB::ProjectEditor ALIAS librepcb_projecteditor)
