[package]
name = "librepcb-rust-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[features]
fail-on-warnings = []
ffi = ["dep:cbindgen"]

[build-dependencies]
cbindgen = { version = "0.29.3", optional = true }

[dependencies]
interactive-html-bom = "0.2.0"
keyring-core = "1.0.0"
libm = "0.2.16"
lz-str = "0.2.1"  # Keep in sync with interactive-html-bom

[dependencies.dbus-secret-service-keyring-store]
version = "1.0.0"
features = ["crypto-rust", "vendored"]

[dependencies.regex]
version = "1.11"
default-features = false
features = ["std", "unicode"]

# ATTENTION: Do *not* update to a newer version as long as there are concerns
# regarding library maintenance, performance and security!
# -> https://github.com/PyO3/python-pkginfo-rs/issues/13
# -> https://github.com/zip-rs/zip2/issues/250
# Maybe https://crates.io/crates/rc-zip-sync/ would be a better option?
[dependencies.zip]
version = "=0.6.6"
default-features = false
features = ["deflate", "time"]

[dev-dependencies]
parameterized_test = "0.2.1"
